--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "babel-node tools/srcServer.js"
   },
   "dependencies": {
     "babel-polyfill": "6.8.0",
