--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "react-redux-app",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "Anh Vo Duy <duyanh2005@gmail.com>",
   "license": "MIT",
-  "main": "app.js",
+  "engines": {
+    "node": "^8.11.1"
+  },
   "scripts": {
     "prestart": "babel-node tools/startMessage.js",
+    "dev": "npm-run-all --parallel open:src lint:watch test:watch",
     "start": "npm-run-all --parallel open:src lint:watch test:watch",
     "open:src": "babel-node tools/srcServer.js",
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
