--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-router-redux": "4.0.4",
     "react-select": "^1.2.1",
     "redux": "3.5.2",
-    "redux-form": "^7.3.0",
+    "redux-form": "5.3.5",
     "redux-thunk": "2.0.1",
     "toastr": "2.1.2"
   },
