--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.6",
     "jquery": "2.2.3",
-    "react": "^15.0.2",
-	"react-dom": "^15.0.2",
+    "react": "15.0.2",
+	"react-dom": "15.0.2",
     "react-bootstrap": "^0.30.6",
     "react-bootstrap-dropdown": "^0.3.0",
     "react-paginate": "^5.2.2",
