--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
     "bootstrap": "3.3.6",
     "jquery": "2.2.3",
     "react": "15.0.2",
-	"react-dom": "15.0.2",
     "react-bootstrap": "^0.30.6",
     "react-bootstrap-dropdown": "^0.3.0",
+    "react-dom": "15.0.2",
     "react-paginate": "^5.2.2",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
     "react-router-redux": "4.0.4",
     "react-select": "^1.2.1",
+    "react-widgets": "^4.3.2",
     "redux": "3.5.2",
-    "redux-form": "5.3.5",
+    "redux-form": "6.0.1",
     "redux-thunk": "2.0.1",
     "toastr": "2.1.2"
   },
