--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router": "2.4.0",
     "react-router-redux": "4.0.4",
     "react-select": "^1.2.1",
+    "react-widgets": "^4.3.2",
     "redux": "3.6.0",
     "redux-form": "6.7.0",
     "redux-thunk": "2.0.1",
