--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-redux-app",
   "version": "1.1.0",
-  "author": "Anh Vo Duy <duyanh2005@gmail.com>",
+  "author": "Anh Vo Duy",
   "license": "MIT",
   "engines": {
     "node": "^8.11.1"
@@ -17,7 +17,7 @@
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "0.18.0",
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.6",
     "jquery": "2.2.3",
